version estable 1.0.0 - adding more flags to Dockerfile